--- a/test/test01.html
+++ b/test/test01.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>화면 구현test01</title>
     <style>
+        /* font */
         @font-face {
             font-family: 'S-CoreDream-8Heavy';
             src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_six@1.2/S-CoreDream-8Heavy.woff') format('woff');
@@ -13,13 +14,15 @@
             font-style: normal;
         }
 
-        body {
-            background: #ffe0b2;
-        }
-
+        /*reset*/
         * {
             margin: 0px;
             padding: 0px;
+        }
+
+        /*layout*/
+        body {
+            background: #ffe0b2;
         }
 
         #wrap {
@@ -40,6 +43,7 @@
             background: #ffcc80;
         }
 
+
         #nav {
             width: 1200px;
             height: 150px;
@@ -47,6 +51,7 @@
             background: #ffb74d;
         }
 
+        /* nav */
         #side {
             width: 450px;
             height: 1100px;
@@ -76,14 +81,17 @@
 <body>
     <div id="wrap">
         <div id="header">header</div>
+        <!-- header -->
         <div id="nav">nav</div>
+        <!-- nav -->
         <div id="side">side</div>
+        <!-- side -->
         <div id="contents">contens</div>
+        <!-- conents -->
         <div id="footer">footer</div>
+        <!-- footer -->
     </div>
-
+    <!-- wrap -->
 </body>
-
 </html>
-
 <select name="" id=""></select>
