--- a/test/test03.html
+++ b/test/test03.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>화면 구현 03</title>
     <style>
+        /* font */
         @font-face {
             font-family: 'S-CoreDream-8Heavy';
             src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_six@1.2/S-CoreDream-8Heavy.woff') format('woff');
@@ -13,11 +14,13 @@
             font-style: normal;
         }
 
+        /* reset */
         * {
             margin: 0;
             padding: 0;
         }
 
+        /* layout */
         body {
             background: #e8eaf6;
         }
@@ -70,10 +73,15 @@
 <body>
     <div id="warp">
         <div id="side">side</div>
+        <!-- side -->
         <div id="header">header</div>
+        <!-- header -->
         <div id="contents">contents</div>
+        <!-- contents -->
         <div id="footer">footer</div>
+        <!-- footer -->
     </div>
+    <!-- wrap -->
 </body>
 
 </html>
