--- a/test/test02.html
+++ b/test/test02.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>화면 구현 test02</title>
     <style>
+        /* font */
         @font-face {
             font-family: 'S-CoreDream-8Heavy';
             src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_six@1.2/S-CoreDream-8Heavy.woff') format('woff');
@@ -13,11 +14,13 @@
             font-style: normal;
         }
 
+        /* reset */
         * {
             margin: 0;
             padding: 0;
         }
 
+        /* layout */
         #warp {
             width: 100%;
             font-size: 72px;
@@ -90,16 +93,21 @@
         <div id="header_wrap">
             <div class="header">header</div>
         </div>
+        <!-- header -->
         <div id="baaner_wrap">
             <div class="banner">banner</div>
         </div>
+        <!-- banner -->
         <div id="contents_wrap">
             <div class="contents">contents</div>
         </div>
+        <!-- contents -->
         <div id="footer_wrap">
             <div class="footer">footer</div>
         </div>
+        <!-- footer -->
     </div>
+    <!-- wrap -->
 </body>
 
 </html>
