--- a/test/test04.html
+++ b/test/test04.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>화면 구현 test</title>
     <style>
+        /* font */
         @font-face {
             font-family: 'S-CoreDream-8Heavy';
             src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_six@1.2/S-CoreDream-8Heavy.woff') format('woff');
@@ -13,11 +14,13 @@
             font-style: normal;
         }
 
+        /* reset */
         * {
             margin: 0;
             padding: 0;
         }
 
+        /* layout*/
         #wrap {
             width: 100%;
             font-size: 72px;
@@ -123,9 +126,11 @@
         <div id="header_warp">
             <div class="header">header</div>
         </div>
+        <!-- header -->
         <div id="banner_warp">
             <div class="banner">banner</div>
         </div>
+        <!-- banner -->
         <div id="contents_warp">
             <div class="content1">content1</div>
             <div id="content2_warp">
@@ -135,10 +140,13 @@
             <div id="contents3_warp">
                 <div class="content3">content3</div>
             </div>
+            <!-- contents -->
             <div id="footer_warp">
                 <div class="footer">footer</div>
             </div>
+            <!-- footer -->
         </div>
+        <!-- wrap -->
 </body>
 
 </html>
