--- a/javascript/javascript01.html
+++ b/javascript/javascript01.html
@@ -73,6 +73,7 @@
             document.write("1. 함수가 실행되었습니다.<br>");
         }
         func1();
+        
         //화살표(익명 함수)
 
         let func2 = () => {
@@ -103,6 +104,7 @@
         let result3 = func5("5. 함수가 실행되었습니다.<br>");
         document.write(result3);
 
+        // 화살표 함수(괄호생략+리턴생략)
         let func6 = str => str;
         let result4 = func6("6. 함수가 실행되었습니다.<br>");
         document.write(result4)
